<resources>
    <string name="app_name">Venues</string>
    <!-- Hints -->
    <string name="hint_emailAddress">Email Address</string>
    <string name="hint_password">Password</string>
    <!-- Event -->
    <string name="hint_eventTitle">Title</string>
    <string name="hint_eventDescription">Description</string>
    <string name="hint_eventTicket">Ticket</string>
    <string name="hint_eventType">Type</string>
    <string name="hint_eventTime">Time</string>
    <string name="hint_eventDate">Date</string>
    <string name="hint_eventOrganiser">Organiser</string>
    <!-- Venue -->
    <string name="hint_venueTitle">Title</string>
    <string name="hint_venueDescription">Description</string>
    <string name="hint_venueContact">Contact</string>
    <string name="hint_venueType">Type</string>
    <string name="hint_venue_rating">Rating</string>
    <!-- Buttons  -->
    <!-- Venue -->
    <string name="button_venue_image">Add Venue Image</string>
    <string name="button_venue_location">Set Location</string>
    <string name="button_venue_rating">Rating</string>
    <string name="button_venue_add">Add Venue</string>
    <string name="change_venue_image">Change Venue Image</string>
    <!-- -->
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_event_add">Add Event</string>

    <!-- Venue Activity -->
    <string-array name="venue_type">
        <item>Bar</item>
        <item>Nightclub</item>
        <item>Hall</item>
        <item>Stadium</item>
        <item>Theatre</item>
    </string-array>

    <string name="save_venue">Save Venue</string>
    <string name="enter_all_venue_details">Enter All Venue Details</string>

    <string name="menu_addVenue">Add Venue</string>

    <string name="menu_cancelVenue">Cancel Venue</string>
    <string name="menu_deleteVenue">Delete Venue</string>

    <string name="venue_image_placeholder">Venue Image</string>
    <string name="venue_name_placeholder">Venue Name</string>
    <string name="venue_description_placeholder">Venue Description</string>

    <string name="button_events">Events</string>
    <string name="button_venues">Venues</string>
    <string name="button_eb">Eventbrite Events</string>
    <string name="button_settings">Settings</string>

    <!-- Settings -->
    <string name="button_choose_theme">Choose Theme</string>

    <string name="choose_theme">Choose Theme</string>

    <string name="title_activity_map">MapActivity</string>

    <!-- Card Event -->
    <string name="eventTitle">Title: </string>
    <string name="eventDescription">Description: </string>
    <string name="eventTicket">Ticket: </string>
    <string name="eventType">Type: </string>
    <string name="eventTime">Time: </string>
    <string name="eventDate">Date: </string>
    <string name="eventOrganiser">Organiser: </string>
</resources>