<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/eventTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="@string/hint_eventTitle"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteY="343dp" />

                <EditText
                    android:id="@+id/eventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="@string/hint_eventDescription"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteY="343dp" />

                <EditText
                    android:id="@+id/eventTicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="@string/hint_eventTicket"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteY="343dp" />

                <EditText
                    android:id="@+id/eventType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="@string/hint_eventType"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteY="343dp" />

                <EditText
                    android:id="@+id/eventTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="@string/hint_eventTime"
                    android:inputType="time"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteY="343dp" />

                <EditText
                    android:id="@+id/eventDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="@string/hint_eventDate"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteY="343dp" />

                <EditText
                    android:id="@+id/eventOrganiser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="@string/hint_eventOrganiser"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteY="343dp" />

                <Button
                    android:id="@+id/btnAddEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_event_add"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteY="536dp" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>