<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VenueActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/venueTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="@string/hint_venueTitle"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteY="343dp" />

                <EditText
                    android:id="@+id/venueDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="@string/hint_venueDescription"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteY="343dp" />

                <EditText
                    android:id="@+id/venueContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="@string/hint_venueContact"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteY="343dp" />

                <Spinner
                    android:id="@+id/venueType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:entries="@array/venue_type"
                    android:hint="@string/hint_venueType"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteY="343dp" />

                <Button
                    android:id="@+id/btnAddImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_venue_image"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteY="536dp" />

                <ImageView
                    android:id="@+id/venueImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher" />

                <Button
                    android:id="@+id/btnAddLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_venue_location"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteY="536dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/hint_venue_rating"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteY="536dp" />

                <RatingBar
                    android:id="@+id/venueRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_venue_rating"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteY="536dp" />

                <Button
                    android:id="@+id/btnAddVenue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_venue_add"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteY="536dp" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>